[project]
name = "agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.12",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.40.0",
    "watchdog>=6.0.0",
]
